# codag-drain

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  railway.toml
.claude/: settings.local.json
.github/workflows/: release.yml
codag/: Cargo.toml
codag-drain/: Cargo.toml
codag-drain/src/: compress.rs  input.rs  lib.rs  stream.rs
codag-drain/src/compress/: grouper.rs  lex.rs  profile.rs  template.rs
codag-drain/tests/: eval_loghub.rs
codag-server/: Cargo.toml
codag-server/src/: lib.rs  main.rs  routes.rs  session.rs
codag-server/tests/: integration.rs
codag/src/: compress.rs  lib.rs  stream.rs
codag/src/compress/: grouper.rs  guard.rs  normalize.rs  profile.rs  role.rs  template.rs
codag/tests/: eval_loghub.rs
docs/: AGENT_SERVING_EVAL.md  PUBLIC_BENCHMARKS.md
drain3_rust/: Cargo.toml
drain3_rust/src/: bench.rs  cluster.rs  drain.rs  lib.rs  masking.rs  node.rs  parse_event.rs  pipeline.rs  similarity.rs  storage.rs  tests.rs
examples/server/: Cargo.toml  Dockerfile
examples/server/src/: lib.rs  main.rs  routes.rs  session.rs
examples/server/tests/: integration.rs
scripts/: public_benchmarks.sh
