[package]
name = "codag-drain"
version = "0.1.0"
edition = "2021"
description = "codag-drain - deterministic log templating adapted from Drain3 for codag wrap."
license = "MIT"
keywords = ["logs", "templating", "drain3"]

[dependencies]
drain3_rust = { path = "../drain3_rust" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
csv = "1"
