[package]
name = "codag-server"
version = "0.1.0"
edition = "2021"
description = "codag real-time capsule daemon — agents stream logs in and subscribe to live IncidentCapsules."

[dependencies]
codag = { path = "../codag" }
regex = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"
futures = "0.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
