[package]
name = "codag-drain-server"
version = "0.1.0"
edition = "2021"
description = "Reference HTTP host for codag-drain deterministic log templating."
license = "MIT"
publish = false

[dependencies]
codag-drain = { path = "../../codag-drain" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
